run show in first page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    hello world
+    <div id="ruleIframe"></div>
+    <div id="container">
+      <header></header>
+      <nav></nav>
+      <aside></aside>
+      <main>
+        <img src="img/logo.png">
+      </main>
+      <footer>
+        <div>
+          <img src="img/btnStartGame.png">
+        </div>
+        <div>
+          <img id="runFunction" src="img/runFunction.png">
+        </div>
+        <div>
+          <img id="ruleButton" src="img/btnViewRules.png">
+        </div>
+      </footer>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
